--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <!-- Use relative path to avoid cross-platform issues -->
+    <script type="module" src="./src/main.jsx"></script>
   </body>
 </html>
